# crop

./: #Makefile.am#  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ISSUE_TEMPLATE.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  check_crop.sh  config.h  config.h.in  config.status  configure  configure.ac  crop  crop.1  crop_test.sh  find_browser.sh  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
compiled/linux_X86_32/: crop  crop_linux_32_bin.tgz
compiled/linux_X86_32/doc/: crop.1.html  light.css
compiled/linux_X86_64/: crop  crop_linux_X86_64_bin.tgz
compiled/linux_X86_64/doc/: README  base.css  crop.html
compiled/windows/: Readme.txt  crop.cmd  install.cmd
doc/: README  crop.1  crop.1.html  crop.html
src/: Makefile  crop.c  crop.h  help.h  help.h~  options.h  utils.h
src/.deps/: crop.Po
